--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="javascript.js"></script>
 </head>
 <body>
-    
+    <div class="tab">
+        <img class="logo">
+        <div>
+            Dashboard
+        </div>
+        <li>
+            <ul>Home</ul>
+            <ul>Profile</ul>
+            <ul>Messages></ul>
+            <ul>History</ul>
+            <ul>Task</ul>
+            <ul>Communities</ul>
+        </li>
+        <li>
+            <ul>Settings</ul>
+            <ul>Support</ul>
+            <ul>Privacy></ul>
+        </li>
+    </div>
+    <div class="page">
+
+    </div>
 </body>
 </html>
