HTML text content and framework

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    <div class="tab">
-        <img class="logo">
+    <div class="sidebar">
         <div>
-            Dashboard
+            <img class="logo">
+            <p>Dashboard</p>
         </div>
         <li>
             <ul>Home</ul>
@@ -27,8 +27,111 @@
             <ul>Privacy></ul>
         </li>
     </div>
-    <div class="page">
-
+    <div class="container">
+        <div class="top page">
+            <div class="top header">
+                <div>
+                    <button class="icon"><img class="search"></button>
+                    <input>
+                </div>
+                <div>
+                    <button class="icon"><img class="alert"></button>
+                    <img class="logo">
+                    <p>Username</p>
+                </div>
+            </div>
+            <div class="bottom header">
+                <div>
+                    <img class="large logo">
+                    <p>Hi there,</p>
+                    <p>Username (@userID)</p>
+                </div>
+            </div>
+        </div>
+        <div class="bottom page">
+            <div class="left container">
+                <p>Your Projects</p>
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+            </div>
+            <div class="right container">
+                <div>
+                    <p>Annoucements</p>
+                    <div>
+                        <p>Site Maintaince</p>
+                        <p>Text content...</p>
+                    </div>
+                    <div>
+                        <p>Community Share Day</p>
+                        <p>Text content...</p>
+                    </div>
+                    <div>
+                        <p>Updated Privacy Policy</p>
+                        <p>Text content...</p>
+                    </div>
+                </div>
+                <div>
+                    <p>Trending</p>
+                    <div>
+                        <img class="user">
+                        <p>@username</p>
+                        <p>Subtext.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
