--- a/index.html
+++ b/index.html
@@ -8,126 +8,128 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    <div class="sidebar">
-        <div>
-            <img class="logo">
-            <p>Dashboard</p>
-        </div>
-        <li>
-            <ul>Home</ul>
-            <ul>Profile</ul>
-            <ul>Messages></ul>
-            <ul>History</ul>
-            <ul>Task</ul>
-            <ul>Communities</ul>
-        </li>
-        <li>
-            <ul>Settings</ul>
-            <ul>Support</ul>
-            <ul>Privacy></ul>
-        </li>
-    </div>
     <div class="container">
-        <div class="top page">
-            <div class="top header">
-                <div>
-                    <button class="icon"><img class="search"></button>
-                    <input>
-                </div>
-                <div>
-                    <button class="icon"><img class="alert"></button>
-                    <img class="logo">
-                    <p>Username</p>
-                </div>
+        <div class="nav">
+            <div>
+                <img class="logo">
+                <p>Dashboard</p>
             </div>
-            <div class="bottom header">
-                <div>
-                    <img class="large logo">
-                    <p>Hi there,</p>
-                    <p>Username (@userID)</p>
-                </div>
-            </div>
+            <li>
+                <ul>Home</ul>
+                <ul>Profile</ul>
+                <ul>Messages</ul>
+                <ul>History</ul>
+                <ul>Task</ul>
+                <ul>Communities</ul>
+            </li>
+            <li>
+                <ul>Settings</ul>
+                <ul>Support</ul>
+                <ul>Privacy</ul>
+            </li>
         </div>
-        <div class="bottom page">
-            <div class="left container">
-                <p>Your Projects</p>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
+        <div class="content">
+            <div class="top page">
+                <div class="top header">
+                    <div>
+                        <button class="icon"><img class="search"></button>
+                        <input>
+                    </div>
+                    <div>
+                        <button class="icon"><img class="alert"></button>
+                        <img class="logo">
+                        <p>Username</p>
                     </div>
                 </div>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                    </div>
-                </div>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
+                <div class="bottom header">
+                    <div>
+                        <img class="large logo">
+                        <p>Hi there,</p>
+                        <p>Username (@userID)</p>
                     </div>
                 </div>
             </div>
-            <div class="right container">
-                <div>
-                    <p>Annoucements</p>
+            <div class="bottom page">
+                <div class="left page">
+                    <p>Your Projects</p>
                     <div>
-                        <p>Site Maintaince</p>
-                        <p>Text content...</p>
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
                     </div>
                     <div>
-                        <p>Community Share Day</p>
-                        <p>Text content...</p>
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
                     </div>
                     <div>
-                        <p>Updated Privacy Policy</p>
-                        <p>Text content...</p>
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
+                    </div>
+                    <div>
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
+                    </div>
+                    <div>
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
+                    </div>
+                    <div>
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <p>Trending</p>
+                <div class="right page">
                     <div>
-                        <img class="user">
-                        <p>@username</p>
-                        <p>Subtext.</p>
+                        <p>Annoucements</p>
+                        <div>
+                            <p>Site Maintaince</p>
+                            <p>Text content...</p>
+                        </div>
+                        <div>
+                            <p>Community Share Day</p>
+                            <p>Text content...</p>
+                        </div>
+                        <div>
+                            <p>Updated Privacy Policy</p>
+                            <p>Text content...</p>
+                        </div>
+                    </div>
+                    <div>
+                        <p>Trending</p>
+                        <div>
+                            <img class="user">
+                            <p>@username</p>
+                            <p>Subtext.</p>
+                        </div>
                     </div>
                 </div>
             </div>
