Revising grid layout sidebar and header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="nav">
+        <div class="sidebar">
             <div>
                 <img class="logo">
                 <p>Dashboard</p>
@@ -28,29 +28,37 @@
                 <ul>Privacy</ul>
             </li>
         </div>
-        <div class="content">
-            <div class="top page">
-                <div class="top header">
-                    <div>
-                        <button class="icon"><img class="search"></button>
-                        <input>
-                    </div>
-                    <div>
-                        <button class="icon"><img class="alert"></button>
-                        <img class="logo">
-                        <p>Username</p>
-                    </div>
+        <div class="header">
+            <div class="">
+                <div>
+                    <button class="icon"><img class="search"></button>
+                    <input>
                 </div>
-                <div class="bottom header">
-                    <div>
-                        <img class="large logo">
-                        <p>Hi there,</p>
-                        <p>Username (@userID)</p>
-                    </div>
+                <div>
+                    <button class="icon"><img class="alert"></button>
+                    <img class="logo">
+                    <p>Username</p>
                 </div>
             </div>
+            <div class="">
+                <div>
+                    <img class="large logo">
+                    <p>Hi there,</p>
+                    <p>Username (@userID)</p>
+                </div>
+                <div>
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="content">
             <div class="bottom page">
-                <div class="left page">
+                <div class="left">
                     <p>Your Projects</p>
                     <div>
                         <p>Title</p>
@@ -107,7 +115,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="right page">
+                <div class="right">
                     <div>
                         <p>Annoucements</p>
                         <div>
