Spacing grid for container

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </li>
         </div>
         <div class="header">
-            <div class="">
+            <div class="top">
                 <div>
                     <button class="icon"><img class="search"></button>
                     <input>
@@ -40,7 +40,7 @@
                     <p>Username</p>
                 </div>
             </div>
-            <div class="">
+            <div class="bottom">
                 <div>
                     <img class="large logo">
                     <p>Hi there,</p>
@@ -53,91 +53,86 @@
                 </div>
             </div>
         </div>
-
-
-
         <div class="content">
-            <div class="bottom page">
-                <div class="left">
-                    <p>Your Projects</p>
-                    <div>
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
-                    </div>
-                    <div>
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
-                    </div>
-                    <div>
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
-                    </div>
-                    <div>
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
-                    </div>
-                    <div>
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
-                    </div>
-                    <div>
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
+            <div class="left">
+                <p>Your Projects</p>
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
                     </div>
                 </div>
-                <div class="right">
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+                <div>
+                    <p>Title</p>
+                    <p>Text content.</p>
+                    <div class="buttons">
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                        <button class="icon"><img></button>
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <div>
+                    <p>Annoucements</p>
                     <div>
-                        <p>Annoucements</p>
-                        <div>
-                            <p>Site Maintaince</p>
-                            <p>Text content...</p>
-                        </div>
-                        <div>
-                            <p>Community Share Day</p>
-                            <p>Text content...</p>
-                        </div>
-                        <div>
-                            <p>Updated Privacy Policy</p>
-                            <p>Text content...</p>
-                        </div>
+                        <p>Site Maintaince</p>
+                        <p>Text content...</p>
                     </div>
                     <div>
-                        <p>Trending</p>
-                        <div>
-                            <img class="user">
-                            <p>@username</p>
-                            <p>Subtext.</p>
-                        </div>
+                        <p>Community Share Day</p>
+                        <p>Text content...</p>
+                    </div>
+                    <div>
+                        <p>Updated Privacy Policy</p>
+                        <p>Text content...</p>
+                    </div>
+                </div>
+                <div>
+                    <p>Trending</p>
+                    <div>
+                        <img class="user">
+                        <p>@username</p>
+                        <p>Subtext.</p>
                     </div>
                 </div>
             </div>
