--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
                 <img class="logo">
                 <p>Dashboard</p>
             </div>
-            <li>
-                <ul>Home</ul>
-                <ul>Profile</ul>
-                <ul>Messages</ul>
-                <ul>History</ul>
-                <ul>Task</ul>
-                <ul>Communities</ul>
-            </li>
-            <li>
-                <ul>Settings</ul>
-                <ul>Support</ul>
-                <ul>Privacy</ul>
-            </li>
+            <ul>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Task</li>
+                <li>Communities</li>
+            </ul>
+            <ul>
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
         </div>
         <div class="header">
             <div class="top">
@@ -56,58 +56,60 @@
         <div class="content">
             <div class="left">
                 <p>Your Projects</p>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
+                <div class="cardholder">
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <p>Title</p>
-                    <p>Text content.</p>
-                    <div class="buttons">
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
-                        <button class="icon"><img></button>
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
                     </div>
                 </div>
             </div>
