--- a/index.html
+++ b/index.html
@@ -116,25 +116,44 @@
             <div class="right">
                 <div>
                     <p>Annoucements</p>
-                    <div>
-                        <p>Site Maintaince</p>
-                        <p>Text content...</p>
-                    </div>
-                    <div>
-                        <p>Community Share Day</p>
-                        <p>Text content...</p>
-                    </div>
-                    <div>
-                        <p>Updated Privacy Policy</p>
-                        <p>Text content...</p>
+                    <div class="updateholder">
+                        <div class="update">
+                            <p>Site Maintaince</p>
+                            <p>Text content...</p>
+                        </div>
+                        <div class="update">
+                            <p>Community Share Day</p>
+                            <p>Text content...</p>
+                        </div>
+                        <div class="update">
+                            <p>Updated Privacy Policy</p>
+                            <p>Text content...</p>
+                        </div>
                     </div>
                 </div>
                 <div>
                     <p>Trending</p>
-                    <div>
-                        <img class="user">
-                        <p>@username</p>
-                        <p>Subtext.</p>
+                    <div class="peopleholder">
+                        <div class="people">
+                            <img class="user">
+                            <p>@username</p>
+                            <p>Subtext.</p>
+                        </div>
+                        <div class="people">
+                            <img class="user">
+                            <p>@username</p>
+                            <p>Subtext.</p>
+                        </div>
+                        <div class="people">
+                            <img class="user">
+                            <p>@username</p>
+                            <p>Subtext.</p>
+                        </div>
+                        <div class="people">
+                            <img class="user">
+                            <p>@username</p>
+                            <p>Subtext.</p>
+                        </div>
                     </div>
                 </div>
             </div>
