--- a/index.html
+++ b/index.html
@@ -28,131 +28,137 @@
                 <li>Privacy</li>
             </ul>
         </div>
-        <div class="header">
-            <div class="top">
-                <div>
-                    <button class="icon"><img class="search"></button>
-                    <input>
-                </div>
-                <div>
-                    <button class="icon"><img class="alert"></button>
-                    <img class="logo">
-                    <p>Username</p>
-                </div>
-            </div>
-            <div class="bottom">
-                <div>
-                    <img class="large logo">
-                    <p>Hi there,</p>
-                    <p>Username (@userID)</p>
-                </div>
-                <div>
-                    <button>New</button>
-                    <button>Upload</button>
-                    <button>Share</button>
-                </div>
-            </div>
-        </div>
         <div class="content">
-            <div class="left">
-                <p>Your Projects</p>
-                <div class="cardholder">
-                    <div class="card">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
+            <div class="header">
+                <div class="top">
+                    <div>
+                        <button class="icon"><img class="search"></button>
+                        <input>
                     </div>
-                    <div class="card">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
+                    <div>
+                        <button class="icon"><img class="alert"></button>
+                        <img class="logo">
+                        <p>Username</p>
                     </div>
-                    <div class="card">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
+                </div>
+                <div class="bottom">
+                    <div>
+                        <img class="large logo">
+                        <p>Hi there,</p>
+                        <p>Username (@userID)</p>
                     </div>
-                    <div class="card">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <p>Title</p>
-                        <p>Text content.</p>
-                        <div class="buttons">
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                            <button class="icon"><img></button>
-                        </div>
+                    <div>
+                        <button>New</button>
+                        <button>Upload</button>
+                        <button>Share</button>
                     </div>
                 </div>
             </div>
-            <div class="right">
-                <div>
-                    <p>Annoucements</p>
-                    <div class="updateholder">
-                        <div class="update">
-                            <p>Site Maintaince</p>
-                            <p>Text content...</p>
+            <div class="main">
+                <div class="left">
+                    <div>
+                        <p>Your Projects</p>
+                    </div>
+                    <div class="cardholder">
+                        <div class="card">
+                            <p>Title</p>
+                            <p>Text content.</p>
+                            <div class="buttons">
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                            </div>
                         </div>
-                        <div class="update">
-                            <p>Community Share Day</p>
-                            <p>Text content...</p>
+                        <div class="card">
+                            <p>Title</p>
+                            <p>Text content.</p>
+                            <div class="buttons">
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                            </div>
                         </div>
-                        <div class="update">
-                            <p>Updated Privacy Policy</p>
-                            <p>Text content...</p>
+                        <div class="card">
+                            <p>Title</p>
+                            <p>Text content.</p>
+                            <div class="buttons">
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <p>Title</p>
+                            <p>Text content.</p>
+                            <div class="buttons">
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <p>Title</p>
+                            <p>Text content.</p>
+                            <div class="buttons">
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <p>Title</p>
+                            <p>Text content.</p>
+                            <div class="buttons">
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                                <button class="icon"><img></button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div>
-                    <p>Trending</p>
-                    <div class="peopleholder">
-                        <div class="people">
-                            <img class="user">
-                            <p>@username</p>
-                            <p>Subtext.</p>
+                <div class="right">
+                    <div>
+                        <div>
+                            <p>Annoucements</p>
                         </div>
-                        <div class="people">
-                            <img class="user">
-                            <p>@username</p>
-                            <p>Subtext.</p>
+                        <div class="updateholder">
+                            <div class="update">
+                                <p>Site Maintaince</p>
+                                <p>Text content...</p>
+                            </div>
+                            <div class="update">
+                                <p>Community Share Day</p>
+                                <p>Text content...</p>
+                            </div>
+                            <div class="update">
+                                <p>Updated Privacy Policy</p>
+                                <p>Text content...</p>
+                            </div>
                         </div>
-                        <div class="people">
-                            <img class="user">
-                            <p>@username</p>
-                            <p>Subtext.</p>
-                        </div>
-                        <div class="people">
-                            <img class="user">
-                            <p>@username</p>
-                            <p>Subtext.</p>
+                    </div>
+                    <div>
+                        <p>Trending</p>
+                        <div class="peopleholder">
+                            <div class="people">
+                                <img class="user">
+                                <p>@username</p>
+                                <p>Subtext.</p>
+                            </div>
+                            <div class="people">
+                                <img class="user">
+                                <p>@username</p>
+                                <p>Subtext.</p>
+                            </div>
+                            <div class="people">
+                                <img class="user">
+                                <p>@username</p>
+                                <p>Subtext.</p>
+                            </div>
+                            <div class="people">
+                                <img class="user">
+                                <p>@username</p>
+                                <p>Subtext.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
