--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="sidebar">
             <div>
-                <img class="logo">
+                <img src="">
                 <p>Dashboard</p>
             </div>
             <ul>
