--- a/index.html
+++ b/index.html
@@ -8,157 +8,155 @@
     <script src="javascript.js"></script>
 </head>
 <body>
+    <div class="sidebar">
+        <div class="logo">
+            <img src="Images/logo.svg">
+            <p>Dashboard</p>
+        </div>
+        <ul>
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>History</li>
+            <li>Task</li>
+            <li>Communities</li>
+        </ul>
+        <ul>
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+        </ul>
+    </div>
     <div class="container">
-        <div class="sidebar">
-            <div>
-                <img src="">
-                <p>Dashboard</p>
+        <div class="header">
+            <div class="top">
+                <div>
+                    <button class="icon"><img class="search"></button>
+                    <input>
+                </div>
+                <div>
+                    <button class="icon"><img class="alert"></button>
+                    <img class="logo">
+                    <p>Username</p>
+                </div>
             </div>
-            <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Task</li>
-                <li>Communities</li>
-            </ul>
-            <ul>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
-            </ul>
+            <div class="bottom">
+                <div>
+                    <img class="large logo">
+                    <p>Hi there,</p>
+                    <p>Username (@userID)</p>
+                </div>
+                <div>
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
         </div>
         <div class="content">
-            <div class="header">
-                <div class="top">
-                    <div>
-                        <button class="icon"><img class="search"></button>
-                        <input>
-                    </div>
-                    <div>
-                        <button class="icon"><img class="alert"></button>
-                        <img class="logo">
-                        <p>Username</p>
-                    </div>
+            <div class="left">
+                <div>
+                    <p>Your Projects</p>
                 </div>
-                <div class="bottom">
-                    <div>
-                        <img class="large logo">
-                        <p>Hi there,</p>
-                        <p>Username (@userID)</p>
+                <div class="cardholder">
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
                     </div>
-                    <div>
-                        <button>New</button>
-                        <button>Upload</button>
-                        <button>Share</button>
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Title</p>
+                        <p>Text content.</p>
+                        <div class="buttons">
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                            <button class="icon"><img></button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="main">
-                <div class="left">
+            <div class="right">
+                <div>
                     <div>
-                        <p>Your Projects</p>
+                        <p>Annoucements</p>
                     </div>
-                    <div class="cardholder">
-                        <div class="card">
-                            <p>Title</p>
-                            <p>Text content.</p>
-                            <div class="buttons">
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                            </div>
+                    <div class="updateholder">
+                        <div class="update">
+                            <p>Site Maintaince</p>
+                            <p>Text content...</p>
                         </div>
-                        <div class="card">
-                            <p>Title</p>
-                            <p>Text content.</p>
-                            <div class="buttons">
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                            </div>
+                        <div class="update">
+                            <p>Community Share Day</p>
+                            <p>Text content...</p>
                         </div>
-                        <div class="card">
-                            <p>Title</p>
-                            <p>Text content.</p>
-                            <div class="buttons">
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <p>Title</p>
-                            <p>Text content.</p>
-                            <div class="buttons">
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <p>Title</p>
-                            <p>Text content.</p>
-                            <div class="buttons">
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <p>Title</p>
-                            <p>Text content.</p>
-                            <div class="buttons">
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                                <button class="icon"><img></button>
-                            </div>
+                        <div class="update">
+                            <p>Updated Privacy Policy</p>
+                            <p>Text content...</p>
                         </div>
                     </div>
                 </div>
-                <div class="right">
-                    <div>
-                        <div>
-                            <p>Annoucements</p>
+                <div>
+                    <p>Trending</p>
+                    <div class="peopleholder">
+                        <div class="people">
+                            <img class="user">
+                            <p>@username</p>
+                            <p>Subtext.</p>
                         </div>
-                        <div class="updateholder">
-                            <div class="update">
-                                <p>Site Maintaince</p>
-                                <p>Text content...</p>
-                            </div>
-                            <div class="update">
-                                <p>Community Share Day</p>
-                                <p>Text content...</p>
-                            </div>
-                            <div class="update">
-                                <p>Updated Privacy Policy</p>
-                                <p>Text content...</p>
-                            </div>
+                        <div class="people">
+                            <img class="user">
+                            <p>@username</p>
+                            <p>Subtext.</p>
                         </div>
-                    </div>
-                    <div>
-                        <p>Trending</p>
-                        <div class="peopleholder">
-                            <div class="people">
-                                <img class="user">
-                                <p>@username</p>
-                                <p>Subtext.</p>
-                            </div>
-                            <div class="people">
-                                <img class="user">
-                                <p>@username</p>
-                                <p>Subtext.</p>
-                            </div>
-                            <div class="people">
-                                <img class="user">
-                                <p>@username</p>
-                                <p>Subtext.</p>
-                            </div>
-                            <div class="people">
-                                <img class="user">
-                                <p>@username</p>
-                                <p>Subtext.</p>
-                            </div>
+                        <div class="people">
+                            <img class="user">
+                            <p>@username</p>
+                            <p>Subtext.</p>
+                        </div>
+                        <div class="people">
+                            <img class="user">
+                            <p>@username</p>
+                            <p>Subtext.</p>
                         </div>
                     </div>
                 </div>
