Grid setup and rework again

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="content">
-            <div class="left">
+            <div>
                 <div>
                     <p>Your Projects</p>
                 </div>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
             </div>
-            <div class="right">
+            <div>
                 <div>
                     <div>
                         <p>Annoucements</p>
