--- a/index.html
+++ b/index.html
@@ -54,12 +54,10 @@
             </div>
         </div>
         <div class="content">
-            <div>
+            <div class="projects">
+                <p>Your Projects</p>
                 <div>
-                    <p>Your Projects</p>
-                </div>
-                <div class="cardholder">
-                    <div class="card">
+                    <div class="project">
                         <p>Title</p>
                         <p>Text content.</p>
                         <div class="buttons">
@@ -68,7 +66,7 @@
                             <button class="icon"><img></button>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="project">
                         <p>Title</p>
                         <p>Text content.</p>
                         <div class="buttons">
@@ -77,7 +75,7 @@
                             <button class="icon"><img></button>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="project">
                         <p>Title</p>
                         <p>Text content.</p>
                         <div class="buttons">
@@ -86,7 +84,7 @@
                             <button class="icon"><img></button>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="project">
                         <p>Title</p>
                         <p>Text content.</p>
                         <div class="buttons">
@@ -95,7 +93,7 @@
                             <button class="icon"><img></button>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="project">
                         <p>Title</p>
                         <p>Text content.</p>
                         <div class="buttons">
@@ -104,7 +102,7 @@
                             <button class="icon"><img></button>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="project">
                         <p>Title</p>
                         <p>Text content.</p>
                         <div class="buttons">
@@ -120,7 +118,7 @@
                     <div>
                         <p>Annoucements</p>
                     </div>
-                    <div class="updateholder">
+                    <div class="updates">
                         <div class="update">
                             <p>Site Maintaince</p>
                             <p>Text content...</p>
@@ -137,23 +135,23 @@
                 </div>
                 <div>
                     <p>Trending</p>
-                    <div class="peopleholder">
-                        <div class="people">
+                    <div class="people">
+                        <div class="person">
                             <img class="user">
                             <p>@username</p>
                             <p>Subtext.</p>
                         </div>
-                        <div class="people">
+                        <div class="person">
                             <img class="user">
                             <p>@username</p>
                             <p>Subtext.</p>
                         </div>
-                        <div class="people">
+                        <div class="person">
                             <img class="user">
                             <p>@username</p>
                             <p>Subtext.</p>
                         </div>
-                        <div class="people">
+                        <div class="person">
                             <img class="user">
                             <p>@username</p>
                             <p>Subtext.</p>
